tests/negative/runtime/substr_empty_start_one/input.ci
void main() {
    print(substr("", 1, 0) + "\n");
}
